--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.name=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/ehu?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://172.23.0.75:3306/ehu?characterEncoding=utf-8&useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
