--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8000
+
 spring.datasource.name=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://172.23.0.75:3306/ehu?characterEncoding=utf-8&useSSL=false
